[workspace]
resolver = "2"
members = ["tiki-macros", "tiki-proto", "tiki-render", "tiki-world"]

[package]
name = "tiki"
version = "0.1.0"
edition = "2021"
license = "LGPL-2.1"

[dependencies]
anyhow = "1.0.86"
tiki-proto = { path = "tiki-proto" }
tiki-render = { path = "tiki-render" }
winit = "0.30.5"
