[package]
name = "tiki-editor"
version = "0.1.0"
edition = "2021"

[dependencies]
tiki-render = { path = "../tiki-render" }
tiki-world = { path = "../tiki-world", features = ["postgres"] }

winit = "0.30.5"
egui = "0.29.1"
egui-winit = "0.29.1"
egui-wgpu = "0.29.1"
wgpu = "22.1.0"

[lints]
workspace = true
