[package]
name = "tiki-render"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
tiki-world = { path = "../tiki-world" }

glam = { version = "0.29.0", features = ["bytemuck"] }
pollster = "0.3.0"
raw-window-handle = "0.6.2"
wgpu = "22.1.0"
bytemuck = { version = "1.18.0", features = ["derive"] }
